# worldcup-ml

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
models/: model_1x2.joblib  model_cards.pkl  model_corners.pkl  model_player_shots.pkl  registry.json
src/worldcup/: cli.py  dashboard.py  pipeline.py  quality.py  tracking.py
src/worldcup/common/: config.py  constants.py  db.py
src/worldcup/dataplatform/: api_client.py  bronze.py  catalog.py  features.py  seed.py  silver.py
src/worldcup/predictor/: cards.py  corners.py  player_shots.py  poisson_count.py  predict.py  registry.py  simulate.py  train.py
tests/: conftest.py  test_features_quality.py  test_models.py  test_simulate.py
