[project]
name = "worldcup-ml"
version = "0.1.0"
description = "Plataforma de datos + ML para predecir partidos del Mundial FIFA 2026"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Ingesta / API ---
    "httpx>=0.27",          # cliente HTTP moderno (sync + async)
    "tenacity>=8.3",        # reintentos con backoff exponencial
    "pydantic>=2.7",        # contratos/validación de respuestas del API
    "pydantic-settings>=2.3", # config desde .env
    # --- Almacenamiento / transformación ---
    "duckdb>=1.0",          # warehouse analítico embebido (cero infra)
    "polars>=1.0",          # dataframes rápidos (reemplaza pandas)
    "pyarrow>=16.0",        # Parquet
    # --- Calidad de datos ---
    "pandera[polars]>=0.20", # validación de esquemas de tablas
    # --- CLI / UX ---
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Instala con: uv sync --extra ml
ml = [
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "statsmodels>=0.14",   # regresión de Poisson (goles, tarjetas)
    "mlflow>=2.14",        # tracking de experimentos + registro de modelos
    "numpy>=1.26",
    "joblib>=1.4",         # serialización del modelo entrenado
]
# Instala con: uv sync --extra viz
viz = [
    "plotly>=5.22",
    "streamlit>=1.36",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
wc = "worldcup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
